# Grapefruit

./: .gitchangelog.rc  .travis.yml  CHANGES  COPYING  LICENSE  LICENSE.txt  README  README.rst  TODO  grapefruit.py  grapefruit_test.py  requirements.txt  runtests.sh  setup.cfg  setup.py
doc/: color.rst  conf.py  index.rst  makedoc.cmd  whitepoints.rst
grapefruit.egg-info/: PKG-INFO  SOURCES.txt
