[metadata]
name = grapefruit
version = 0.1a4
summary = A module to manipulate color information easily.
description-file =
  README.rst
requires-dist =

## sdist info
author = Xavier Basty
author_email = xbasty@gmail.com
home_page = https://github.com/xav/Grapefruit/
keywords = color, colour
classifier =
  Programming Language :: Python
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Topic :: Software Development
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Multimedia :: Graphics

[files]
modules = grapefruit
resources =
  README.rst = {doc}
  doc/* = {doc}
extra_files =
  setup.py

[nosetests]
verbosity = 3
with-doctest = 1
doctest-extension = rst
exe = 1
with-coverage = 1
cover-package = grapefruit
cover-min-percentage = 90
doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE
